--- a/html_advanced/5-index.html
+++ b/html_advanced/5-index.html
@@ -17,7 +17,7 @@
             <section>Services section</section>
             <section>Works section</section>
             <section>About section</section>
-            <section>Lastest section</section>
+            <section>Latest section</section>
             <section>Testimonials section</section>
             <section>Contact section</section>
         </main>
