--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -12,15 +12,20 @@
 
 <body>
     <header>
+        <div>
         <span>Techium</span>
         <nav></nav>
+        </div>
     </header>
     <main>
         <h1>Homepage</h1>
         <section>
+            <div>
             <h2>We help you build your brand!</h2>
+            </div>
         </section>
         <section>
+            <div>
             <header>
                 <h2>Services</h2>
                 <p>We work with you</p>
@@ -33,8 +38,10 @@
                 <h3>Web Development</h3>
                 <h3>Social Media</h3>
             </div>
+            </div>
         </section>
         <section>
+            <div>
             <header>
                 <h2> Works</h2>
                 <p>Take a look in our portfolio</p>
@@ -50,8 +57,10 @@
                     <h3>Personal Brand</h3>
                 </article>
             </div>
+            </div>
         </section>
         <section>
+            <div>
             <header>
                 <h2>About Us</h2>
                 <p>Everything about us</p>
@@ -76,8 +85,10 @@
                     maxime
                     cum!</p>
             </div>
+            </div>
         </section>
         <section>
+            <div>
             <header>
                 <h2>Latest news</h2>
             </header>
@@ -105,8 +116,10 @@
                         Apparet statim, quae sint officia, quae actiones.</p>
                 </article>
             </div>
+            </div>
         </section>
         <section>
+            <div>
             <header>
                 <h2>Testimonials</h2>
                 <p>We are more than a digital company</p>
@@ -122,8 +135,10 @@
                     Testimonial 3
                 </article>
             </div>
+            </div>
         </section>
         <section>
+            <div>
             <header>
                 <h2>Contact</h2>
                 <p>We like to know new people</p>
@@ -133,10 +148,13 @@
                     modo? At
                     eum nihili facit; Quae contraria sunt his, malane?</p>
             </div>
+            </div>
         </section>
     </main>
     <footer>
+        <div>
         Footer
+        </div>
     </footer>
 </body>
 
