--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -17,6 +17,8 @@
             <a href="/">
                 <span>Techium</span>
             </a>
+        </div>
+        <div>
             <nav></nav>
         </div>
     </header>
