--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -21,12 +21,13 @@
             </div>
             <nav>
                 <a href="/">Home</a>
-                <a href="/services">Services</a>
-                <a href="/works">Works</a>
-                <a href="/about">About</a>
-                <a href="/latest_news">Latest News</a>
-                <a href="/testimonials">Testimonials</a>
-                <a href="/contact">Contact</a>
+                <a href="">Services</a>
+                <a href="">Works</a>
+                <a href="">About</a>
+                <a href="">Latest News</a>
+                <a href="">Testimonials</a>
+                <a href="">Contact</a>
+
             </nav>
         </div>
     </header>
