--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -29,7 +29,6 @@
         <section>
             <header>
                 <h2>Paragraph</h2>
-                <!--Lists-->
             </header>
             <h2>Heading with a subtitle</h2>
             <p>This is my subtitle</p>
@@ -37,11 +36,13 @@
                 faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
                 varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
         </section>
+        <!--Lists-->
         <section>
             <header>
                 <h2>List</h2>
             </header>
             <div>
+                <h3>Unordered</h3>
                 <ul>
                     <li>Dolor pulvinar etiam magna etiam.</li>
                     <li>Sagittis adipiscing lorem eleifend.</li>
