--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -197,10 +197,10 @@
     </main>
     <!-- Footer -->
     <footer>
-        <adress>
+        <address>
         234 Washington Street<br>
         Urbana, Illinois
-    </adress>
+    </address>
         <div>
             <ul>
                 <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
