--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -115,10 +115,12 @@
                 </address>
             </div>
             <div>
+                <pre>
                 <code>
                     <h2>My title</h2>
                     <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
                 </code>
+                </pre>
             </div>
             <div>
                 <p>Curabitur sit amet turpis cursus massa mollis <strong>highlighted</strong>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <strong>highlighted</strong> mi consequat ut. Cras nec quam sed sapien ultricies <strong>highlighted</strong> ut sed metus.</p>
