--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -137,7 +137,8 @@
             </header>
             <div>
                 <table>
-                    <caption><B>Star Wars Trilogy Data</B></caption>
+                    <hr>
+                    <caption>Star Wars Trilogy Data</caption>
                     <tr>
                         <th scope="col">Title</th>
                         <th scope="col"> Director</th>
