--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -139,25 +139,30 @@
                 <table>
                     <hr>
                     <caption>Star Wars Trilogy Data</caption>
+                    <thead>
                     <tr>
                         <th scope="col">Title</th>
                         <th scope="col"> Director</th>
                         <th scope="col">Release Date</th>
                     </tr>
+                </thead>
+                <tbody>
                     <tr>
-                        <td scope="row"><B>Star Wars: Episode IV - A New Hope</B></td>
-                        <td scope="row">George Lucas</td>
-                        <td scope="row">May 25th, 1977</td>
+                        <th scope="row">Star Wars: Episode IV - A New Hope</th>
+                        <td>George Lucas</td>
+                        <td>May 25th, 1977</td>
                     </tr>
                     <tr>
-                        <td scope="row"><B>Star Wars: Episode V -The Empire Strikes Back</B></td>
-                        <td scope="row">Irvin Kershner</td>
-                        <td scope="row">May 21st, 1980</td>
+                        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
+                        <td>Irvin Kershner</td>
+                        <td>May 21st, 1980</td>
                     </tr>
                     <tr>
-                        <td scope="row"><B>Star Wars: Episode VI - Return of the Jedi</B></td>
-                        <td scope="row">Richard Marquand</td>
-                        <td scope="row">May 25th, 1983</td>
+                        <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
+                        <td>Richard Marquand</td>
+                        <td>May 25th, 1983</td>
+                    </tr>
+                    </tbody>
                     </table>
             </div>
         </section>
