--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -16,7 +16,7 @@
         <div>
             <div>
                 <a href="/">
-                    <img="./logo-black.png" alt="Techium logo">
+                    <img src="./logo-black.png" alt="Techium logo">
                 </a>
             </div>
             <nav>
@@ -197,6 +197,7 @@
     </main>
     <!-- Footer -->
     <footer>
+        <img src="./logo-white.png" alt="Techium logo">
         <address>
         234 Washington Street<br>
         Urbana, Illinois
