--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -188,12 +188,10 @@
             <header>
                 <h2>Video</h2>
             </header>
-            <div>
-                <video>
+                <video controls>
                     <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
                     Sorry, your browser doesn't support HTML5 video
                 </video>
-            </div>
         </section>
     </main>
     <footer>
