--- a/html_advanced/39-styleguide.html
+++ b/html_advanced/39-styleguide.html
@@ -198,8 +198,7 @@
             <header>
                 <h2>Audio</h2>
             </header>
-            <audio controls
-                src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" type="audio/mpeg">
+            <audio controls src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3">
                 Sorry, your browser doesn't support HTML5 audio
             </audio>
         </section>
